--- a/minons/style.css
+++ b/minons/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Rubik+Doodle+Shadow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Rubik+Doodle+Shadow&display=swap');
 
+body {
+    margin: 0;
+}
+
 main {
     background-color: yellow;
 }
@@ -32,23 +36,22 @@ div {
 }
 
 h5 {
-    text-align: center;
     font-family: 'Inter', sans-serif;
     font-size: 12px;
     text-align: center;
 }
 
 p {
-    text-align: center;
     font-family: 'Inter', sans-serif;
     font-size: 15px;
 }
 
 a {
    background-color: blue;
-   text-align: center;
    color: #fff;
    padding: 12px 40px;
+   text-decoration: none;
+   
 }
 
 
