--- a/minons/style.css
+++ b/minons/style.css
@@ -14,6 +14,7 @@ margin-right: auto;
 }
 
 h1 {
+
 color: #fff;
 text-align: center;
 font-family: 'Inter', sans-serif;
@@ -23,6 +24,7 @@ display: block;
 }
 
 div {
+    position: relative;
     background-color: #fff;
     display: inline-block;
     width: 255px;
@@ -53,19 +55,21 @@ a {
 
 .balance {
     position: absolute;
-    top: 190px;
-    left: 495px;
+    bottom: 285px;
+    right: 215px;
+}
+
+
+.star {
+    position: absolute;
+    bottom: 285px;
+    right: 10px;
 }
 
 .sale {
     position: absolute;
-    left: 495px;
-    top: 457px;
-}
-
-.star {
-    position: absolute;
-    top: 190px;
+    top: 280px;
+    right: 215px
 }
 
 
