--- a/Howework№6/style.css
+++ b/Howework№6/style.css
@@ -44,7 +44,6 @@ body {
 
 @media screen and (max-width: 600px) {
     .nav-list {
-    
         font-size: 18px;
     }
 }
@@ -57,19 +56,19 @@ body {
 }
 
 .nav-item {
-    padding-top: 50px;
-    padding-right: 30px;
+    margin-top: 50px;
+    margin-right: 30px;
 }
 
 @media screen and (max-width: 800px) {
     .nav-item {
-        padding-top: 20px;
+        margin-top: 20px;
     }
 }
 
 @media screen and (max-width: 600px) {
     .nav-item {
-        padding-right: 0;
+        
     }
 }
 
